<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:orientation="vertical"
    tools:context="com.freshlancers.sws.ui.activities.forgotPasswordSuccess.ForgotPasswordSuccessActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="32dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_confirm" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/successful"
            android:textColor="@color/black_baby"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/confirm_password_reset"
            android:textColor="@color/btn_toolbar_icon_default"
            android:textSize="18sp" />


        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_done"
            style="@style/Sws.ButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="24dp"
            android:elevation="2dp"
            android:padding="12dp"
            android:text="@string/done"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>
