<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ui.activities.eventDetails.EventDetailsActivity">

    <RelativeLayout
        android:id="@+id/relLayoutParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/white"
            android:fillViewport="true"
            android:paddingBottom="24dp"
            android:scrollbars="none">

            <RelativeLayout
                android:id="@+id/mainRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/secondaryRelativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="vertical"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/events_name"
                        android:textColor="@color/profile_top_background"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/date_place"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="12dp"
                                android:layout_height="12dp"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_calendar_mini" />

                            <TextView
                                android:id="@+id/date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="4dp"
                                android:maxLines="1"
                                android:text="@string/april_5_2017"
                                android:textColor="@color/indicator"
                                android:textSize="15sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/place"
                                android:textColor="@color/indicator"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/place"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="2sp"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:layout_marginEnd="16dp"
                                android:text="@string/school_auditorium"
                                android:textColor="@color/indicator"
                                android:textSize="15sp" />
                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/description_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/date_place"
                        android:layout_marginTop="6dp"
                        android:text="@string/description"
                        android:textColor="@color/black_baby"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <me.biubiubiu.justifytext.library.JustifyTextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/secondaryRelativeLayout"
                    android:layout_marginStart="16sp"
                    android:layout_marginTop="6dp"
                    android:text="@string/lipsum"
                    android:textColor="@color/indicator"
                    android:textSize="15sp" />

            </RelativeLayout>

        </ScrollView>

        <include layout="@layout/layout_bottom_navigation_view" />


    </RelativeLayout>

</LinearLayout>