<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.activities.profile.ProfileActivity">

    <RelativeLayout
        android:id="@+id/relLayoutParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:layout_marginBottom="50dp"
            android:scrollbars="none">

            <RelativeLayout
                android:id="@+id/relLayoutParent2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/relLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="256dp"
                    android:background="@color/profile_top_background">

                    <com.jackandphantom.circularimageview.CircleImage
                        android:id="@+id/circleImage"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="24dp"
                        android:src="@drawable/dummyprofile"
                        app:add_shadow="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/circleImage"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="16dp"
                        android:text="@string/student_name"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textSize="24sp" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:layout_below="@id/relLayout2">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:stretchColumns="*">

                        <TableRow
                            android:layout_marginEnd="24dp"
                            android:layout_marginStart="24dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="0"
                                android:padding="8dp"
                                android:text="@string/roll_no"
                                android:textColor="@android:color/black"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/roll_no"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="1"
                                android:layout_weight="1"
                                android:maxLines="1"
                                android:padding="8dp"
                                android:text="MO1787"
                                android:textColor="@color/indicator"
                                android:textSize="18sp" />

                        </TableRow>

                        <TableRow
                            android:layout_marginEnd="24dp"
                            android:layout_marginStart="24dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="0"
                                android:padding="8dp"
                                android:text="@string/classes"
                                android:textColor="@android:color/black"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/section"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="1"
                                android:layout_weight="1"
                                android:maxLines="1"
                                android:padding="8dp"
                                android:text="10th, A Section"
                                android:textColor="@color/indicator"
                                android:textSize="18sp" />

                        </TableRow>

                        <TableRow
                            android:layout_marginEnd="24dp"
                            android:layout_marginStart="24dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="0"
                                android:padding="8dp"
                                android:text="@string/father_mother"
                                android:textColor="@android:color/black"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/father_mother"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="1"
                                android:layout_weight="1"
                                android:maxLines="1"
                                android:padding="8dp"
                                android:text="Ajith Sing"
                                android:textColor="@color/indicator"
                                android:textSize="18sp" />

                        </TableRow>

                        <TableRow
                            android:layout_marginEnd="24dp"
                            android:layout_marginStart="24dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="0"
                                android:padding="8dp"
                                android:text="@string/contact_no"
                                android:textColor="@android:color/black"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/contact"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="1"
                                android:layout_weight="1"
                                android:maxLines="1"
                                android:padding="8dp"
                                android:text="+91 9538990222"
                                android:textColor="@color/indicator"
                                android:textSize="18sp" />

                        </TableRow>

                        <TableRow
                            android:layout_marginEnd="24dp"
                            android:layout_marginStart="24dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="0"
                                android:padding="8dp"
                                android:text="@string/class_teacher"
                                android:textColor="@android:color/black"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/class_teacher"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="1"
                                android:layout_weight="1"
                                android:maxLines="1"
                                android:padding="8dp"
                                android:text="Jino John"
                                android:textColor="@color/indicator"
                                android:textSize="18sp" />

                        </TableRow>

                        <TableRow
                            android:layout_marginEnd="24dp"
                            android:layout_marginStart="24dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="0"
                                android:padding="8dp"
                                android:text="@string/address"
                                android:textColor="@android:color/black"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/address"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_column="1"
                                android:layout_weight="1"
                                android:maxLines="4"
                                android:padding="8dp"
                                android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
                                android:textColor="@color/indicator"
                                android:textSize="18sp" />

                        </TableRow>


                    </TableLayout>


                </RelativeLayout>


            </RelativeLayout>

        </ScrollView>

        <include layout="@layout/layout_bottom_navigation_view" />

    </RelativeLayout>

</LinearLayout>